--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,6 @@
       <strong>We're sorry but xmgmail doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-
+    <div id="tsj"></div>
   </body>
 </html>
